--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -1,9 +1,97 @@
+<!--<!doctype html>-->
+<!--<html xmlns="http://www.w3.org/1999/xhtml"-->
+<!--      xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>Calendar - Speed coding, Neat Developer</title>-->
+<!--    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">-->
+<!--    &lt;!&ndash; <link rel="stylesheet" href="bower/font-awesome/css/font-awesome.min.css"> &ndash;&gt;-->
+<!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">-->
+<!--    &lt;!&ndash; Bootstrap CSS &ndash;&gt;-->
+<!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">-->
+<!--    <link rel="stylesheet" th:href="@{/css/index.css}">-->
+<!--</head>-->
+<!--<body>-->
+
+<!--    &lt;!&ndash; Importing Navbar	&ndash;&gt;-->
+<!--    <div th:insert="navbar.html :: navbar"></div>-->
+
+<!--    &lt;!&ndash;	Main Container&ndash;&gt;-->
+
+
+
+<!--&lt;!&ndash;    <h1>Add Employee</h1>&ndash;&gt;-->
+<!--    <div class="main-container container py-5 px-4">-->
+<!--        <div class="row" style="justify-content: center">-->
+<!--            <div class="col-md-6 col-md-offset-3">-->
+<!--                <h1>Add Day</h1>-->
+<!--                <form th:action="@{/account}" th:object="${myDay}" method="POST">-->
+<!--                    <div class="form-group">-->
+<!--                        <label class="control-label"> WorkDate</label>-->
+<!--                        <input type="date" name="name" id="name" class="form-control" th:field="*{personDay}" required autofocus="autofocus"/>-->
+<!--                    </div>-->
+
+<!--                    <br>-->
+<!--                    <div class="form-group">-->
+<!--                        Choose WorkType-->
+<!--                        <div th:each="model : ${T(com.isakayabasi.worktypeschedule.model.WorkType).values()}">-->
+<!--                            <div class="custom-control custom-radio custom-control-inline">-->
+<!--                                <input type="radio" th:field="{chooseWorkType}" th:value="${model}" class="custom-control-input">-->
+<!--                                <label class="custom-control-label" th:for="${#ids.prev('chooseWorkType')}" th:text="${model}">model</label>-->
+<!--                            </div>-->
+
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <br>-->
+<!--                    <div class="form-group">-->
+<!--                        <button type="submit" class="btn btn-success">Add</button>-->
+<!--                    </div>-->
+<!--                </form>-->
+
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+
+<!--    <table class = "table table-dark table-hover" th:action="@{/account}" th:object = "${myUser}">-->
+<!--        <thead class = "table-dark">-->
+<!--        <tr>-->
+<!--            <th> User Name</th>-->
+<!--            <th> User Last Name</th>-->
+<!--            <th> User Email</th>-->
+<!--            <th> User Status </th>-->
+<!--            <th> User Days </th>-->
+
+<!--        </tr>-->
+<!--        </thead>-->
+
+<!--        <tbody>-->
+<!--        <tr th:each = "user: ${myUser}">-->
+<!--            <td th:text = "${user.firstName}">  </td>-->
+<!--            <td th:text = "${user.lastName}">  </td>-->
+<!--            <td th:text = "${user.email}">  </td>-->
+<!--            <td th:text = "${user.isActive}"> </td>-->
+<!--            <td th:text = "${user.days}"> </td>-->
+<!--        </tr>-->
+
+
+<!--        </tbody>-->
+
+<!--    </table>-->
+
+
+<!--    &lt;!&ndash; Importing Footer&ndash;&gt;-->
+<!--    <div th:insert="footer.html :: footer"></div>-->
+
+<!--    <script async th:src="@{/js/index.js}"></script>-->
+<!--</body>-->
+<!--</html>-->
+
 <!doctype html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Calendar - Speed coding, Neat Developer</title>
+    <title>Calendar</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <!-- <link rel="stylesheet" href="bower/font-awesome/css/font-awesome.min.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
@@ -13,64 +101,80 @@
 </head>
 <body>
 
-    <!-- Importing Navbar	-->
-    <div th:insert="navbar.html :: navbar"></div>
+<!-- Importing Navbar	-->
+<div th:insert="navbar.html :: navbar"></div>
 
-    <!--	Main Container-->
+<!--	Main Container-->
 
 
 
 <!--    <h1>Add Employee</h1>-->
-    <div class="main-container container py-5 px-4">
-        <div class="row" style="justify-content: center">
-            <div class="col-md-6 col-md-offset-3">
-                <h1>Add Day</h1>
-                <form th:action="@{/account}" th:object="${myDay}" method="POST">
-                    <div class="form-group">
-                        <label class="control-label"> WorkDate</label>
-                        <input type="date" name="name" id="name" class="form-control" th:field="*{personDay}" required autofocus="autofocus" />
-                    </div>
+<div class="main-container container py-5 px-4">
+    <div class="row" style="justify-content: center">
+        <div class="col-md-6 col-md-offset-3">
+            <h1>Add Day</h1>
+            <form th:action="@{/account}" th:object="${myDay}" method="POST">
+                <div class="form-group">
+                    <label class="control-label"> WorkDate</label>
+                    <input type="date" name="name" id="name" class="form-control" th:field="*{personDay}" required autofocus="autofocus"/>
+                </div>
 
-                    <br>
-                    <div class="form-group">
-                        <button type="submit" class="btn btn-success">Add</button>
-                    </div>
-                </form>
+                <br>
+                <div class="form-group">
+                    Choose WorkType
+                    <div th:each="model : ${T(com.isakayabasi.worktypeschedule.model.WorkType).values()}">
+                        <div class="custom-control custom-radio custom-control-inline">
+                            <input type="radio" th:field="*{chooseWorkType}" th:value="${model}" class="custom-control-input">
+                            <label class="custom-control-label" th:for="${#ids.prev('chooseWorkType')}" th:text="${model}">model</label>
+                        </div>
 
-            </div>
+                        <!--                            <label th:switch="${chooseWorkType}">-->
+                        <!--                                <p th:case="true">User  is  active</p>-->
+                        <!--                                <p th:case="false">User is passive</p>-->
+                        <!--                            </label>-->
+                        <!--                            <input type="checkbox"  class="form-check-input" role="switch" id="isActive" th:name="isActive"  th:checked="${user.isActive()}" onChange="this.form.submit()" />-->
+                    </div>
+                </div>
+                <br>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-success">Add</button>
+                </div>
+            </form>
+
         </div>
     </div>
+</div>
 
-    <table class = "table table-dark table-hover" th:action="@{/account}" th:object = "${myUser}">
-        <thead class = "table-dark">
-        <tr>
-            <th> User Name</th>
-            <th> User Last Name</th>
-            <th> User Email</th>
-            <th> User Status </th>
-            <th> User Days </th>
+<table class = "table table-dark table-hover" th:action="@{/account}" th:object = "${myUser}">
+    <thead class = "table-dark">
+    <tr>
+        <th> User Name</th>
+        <th> User Last Name</th>
+        <th> User Email</th>
+        <th> User Status </th>
+        <th> User Days </th>
 
-        </tr>
-        </thead>
+    </tr>
+    </thead>
 
-        <tbody>
-        <tr th:each = "user: ${myUser}">
-            <td th:text = "${user.firstName}">  </td>
-            <td th:text = "${user.lastName}">  </td>
-            <td th:text = "${user.email}">  </td>
-            <td th:text = "${user.isActive}"> </td>
-            <td th:text = "${user.days}"> </td>
-        </tr>
-
-
-        </tbody>
-
-    </table>
+    <tbody>
+    <tr th:each = "user: ${myUser}">
+        <td th:text = "${user.firstName}">  </td>
+        <td th:text = "${user.lastName}">  </td>
+        <td th:text = "${user.email}">  </td>
+        <td th:text = "${user.isActive}"> </td>
+        <td th:text = "${user.days}"> </td>
+    </tr>
 
 
-    <!-- Importing Footer-->
-    <div th:insert="footer.html :: footer"></div>
+    </tbody>
 
-    <script async th:src="@{/js/index.js}"></script>
+</table>
+
+
+<!-- Importing Footer-->
+<div th:insert="footer.html :: footer"></div>
+
+<script async th:src="@{/js/index.js}"></script>
 </body>
 </html>
